--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,6 +2,11 @@
   <div class="container-sm d-flex flex-column justify-center align-middle">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: false }, html: { method: :put }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
+      
+      <div class="d-flex justify-content-center mb-4">
+        <%= image_tag @user.avatar, style: "width: 150px; height: 150px; border-radius: 100%; object-fit: cover;" %>
+      </div>
+
       <div class="field form-group mb-4">
         <%= f.label :name, class: "form-label" %><br />
         <%= f.text_field :name, class: "form-control" %>
