--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,9 @@
   <head>
     <title>SocialNetwork</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta description="Post your pictures and what you thinking">
-    <meta keywords= "meet people, network, online meeting">
-    <meta author= "Rodrigo Galdino">
+    <meta name="description" content="Post your pictures and what you thinking">
+    <meta name="keywords" content="meet people, network, online meeting">
+    <meta name="author" content="Rodrigo Galdino">
 
     <%= favicon_link_tag asset_path('favicon.png') %>
 
