remove uggly background

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <%= render 'layouts/google_analytics' %>
   </head>
 
-  <body style="min-height: 100vh; height: max-content; background: var(--bg-color);">
+  <body style="min-height: 100vh; height: max-content;">
     <%= render 'shared/alert' %>
     <div style="min-height: 100vh; height: max-content;">
       <%= render 'shared/header' %>
