fix authorization to posts and start to authorize user

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -67,7 +67,7 @@
                 </div>
                 <div class="row row-cols-3 content-row">
               <% end %>
-              <% if picture.approved %>
+              <% if policy(picture).show? %>
                 <%= link_to picture, class: "p-0 border-1 content" do %>
                   <%= image_tag picture.photo, class: "border w-100 h-100", style: "object-fit: cover;" %>
                 <% end %>
