--- a/app/views/users/_user_preview.html.erb
+++ b/app/views/users/_user_preview.html.erb
@@ -2,9 +2,7 @@
   <%= link_to (user_path(locals[:user])), class: "no-decoration text-dark" do %>
     <div class="d-flex justify-start align-items-center">
       <div>
-        <% if locals[:user].avatar.attached? %>
-          <%= image_tag locals[:user].avatar, style: "width: 50px; height: 50px; border-radius: 100%; object-fit: cover;" %>
-        <% end %>
+        <%= image_tag user_avatar(locals[:user]), style: "width: 50px; height: 50px; border-radius: 100%; object-fit: cover;" %>
       </div>
       <div>
         <% if locals[:name] %>
